--- a/packages.config
+++ b/packages.config
@@ -6,11 +6,16 @@
   <package id="DotNetOpenAuth.OAuth.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.1.4.12333" targetFramework="net45" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.4.12333" targetFramework="net45" />
-  <package id="jQuery" version="1.10.2" targetFramework="net45" />
+  <package id="jQuery" version="3.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="knockoutjs" version="2.3.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="1.2.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="1.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.2.3" targetFramework="net45" />
@@ -19,8 +24,13 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
